# aura-rewards

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.cargo/: audit.toml
.github/: file-filters.yml
.github/workflows/: build-rust-client.yml  ci-cargo-audit.yml  ci-lint-test.yml  main.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts  create.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  create.test.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: mplx_rewards.json  trz_rewards.json
programs/rewards/: Cargo.toml
programs/rewards/src/: asserts.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  utils.rs
programs/rewards/src/instructions/: change_delegate.rs  claim.rs  close_mining.rs  deposit_mining.rs  distribute_rewards.rs  extend_stake.rs  fill_vault.rs  initialize_mining.rs  initialize_pool.rs  mod.rs  withdraw_mining.rs
programs/rewards/src/instructions/penalties/: decrease_rewards.rs  slash.rs
programs/rewards/src/state/: mining.rs  mod.rs  reward_pool.rs
programs/rewards/tests/rewards/: change_delegate.rs  claim.rs  close_mining.rs  deposit_mining.rs  distribute_rewards.rs  extend_stake.rs  fill_vault.rs  initialize_mining.rs  initialize_pool.rs  integration.rs  precision.rs  utils.rs  withdraw_mining.rs
programs/rewards/tests/rewards/penalties/: slash.rs
