[package]
name = "tplx-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
trezoa-program = "^1.18"
tpl-token = { version = "4", features = ["no-entrypoint"] }
borsh = { version = "1.5", features = ["derive"] }
bytemuck = "1.7"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1"
shank = "0.4"
lib-sokoban = "0.3"

[dev-dependencies]
trezoa-program-test = "^1.18"
trezoa-sdk = "^1.18"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration_tests"
path = "tests/rewards/tests.rs"

[features]
no-entrypoint = []
